More attempts to fix broken infowindow styles.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -13,7 +13,8 @@ body {
   color: #333;
 }
 
-.gm-style .gm-style-iw, .gm-style .gm-style-iw a, .gm-style .gm-style-iw span, .gm-style .gm-style-iw label, .gm-style .gm-style-iw div, .gm-style div, .gm-style span, .gm-style label, .gm-style a {
+.gm-style .gm-style-iw, .gm-style .gm-style-iw a, .gm-style .gm-style-iw span, .gm-style .gm-style-iw label, 
+.gm-style .gm-style-iw div, .gm-style div, .gm-style span, .gm-style label, .gm-style a {
   font-family: "Trebuchet MS", Arial, sans-serif;
 }
 
